recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:5: error: not found: value nLast
return nLast(l.tail, n)
       ^